--- a/Store/index.html
+++ b/Store/index.html
@@ -7,7 +7,7 @@
 	<h1 align="left"><font size="50" face="algerian" color="yellow" <p>Games 4 Dayz</p></font></h1>
 <!-- Top Nav Bar and Input-->
 <header id="main-header">
-	<!--circle logo -->
+logo -->
 	<img class="logo" src="pics/deadhead.jpg" >
 
 	<!--start title-->
@@ -93,6 +93,7 @@
 </section>
 
 <body id="background-body" background="pics/digital-smoke.jpg">
+<script type="match.js"></script>
 	
 	<!-- <h3><font size="20" color="white" <p>The Hottest Games</font></font></h3> -->
 
@@ -106,7 +107,7 @@
 	<br /> -->
 	<div id="sign-up" style="width: 350px" class="customer-form">
 		<form >
-			<fieldset>
+			<fieldset id="fieldset-form">
 				<p><font color="white"><label>Customer Name:</label></label><input/></font></p>
 				<p><font color="white"><label>Street Address:</label><input/></font></p>
 				<p><font color="white"><label>City:</label><input/></font></p>
@@ -126,9 +127,18 @@
 			<input type="checkbox" name="Email"><!--weekly updates new releases-->
 			</font></legend>
 			</p>
-
 			</fieldset>
-			
 		</div>
+
+	<div>
+		<nav id="links">
+			<ul>
+			<li><a href="match.html" >Play Memory Game</a></li>
+			</ul>
+			</nav>
+	</div>
+	<!--circle 
+
+
 </body>
 </html>
