--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1replacement.jpg">
+                                <a href="store/index.html" target = "_blank">
+                                    <img class="img-portfolio img-responsive" src="img/gamer.png">
                                 </a>
                             </div>
                         </div>
@@ -182,6 +182,9 @@
                                 </a>
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
+
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
@@ -192,7 +195,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3replacement.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-4replacement.jpg">
                                 </a>
                             </div>
                         </div>
@@ -237,6 +240,11 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Start Bootstrap</strong>
                     </h4>
+                    <form method="POST" action="http://formspree.io/VernellHill123@gmail.com">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Your message"></textarea>
+  <button type="submit">Send</button>
+</form>
                     <p>3481 Melrose Place
                         <br>Beverly Hills, CA 90210</p>
                     <ul class="list-unstyled">
