--- a/Store/index.html
+++ b/Store/index.html
@@ -48,7 +48,7 @@ logo -->
 		<ol>
 			
 
-			<li><a href="#">Call of Duty</a></li>
+			<li><a imag="#">Call of Duty</a></li>
 			<li><a href="#">Call of Duty</a></li>
 			<li><a href="#">Call of Duty</a></li>
 			<li><a href="#">Call of Duty</a></li>
@@ -133,7 +133,7 @@ logo -->
 	<div>
 		<nav id="links">
 			<ul>
-			<li><a href="match.html" >Play Memory Game</a></li>
+			<li><a href="purchase.html" >Make a Purchase</a></li>
 			</ul>
 			</nav>
 	</div>
