--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                    <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                    <h2>Consider Vernell Hill for your next project!</h2>
+                    <p class="lead">Determined, detail oriented, and dependable. <a target="_blank" href="http://join.deathtothestockphoto.com/"></a>.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -156,7 +156,7 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+            <h1></h1>
         </div>
     </aside>
 
@@ -165,7 +165,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Our Work</h2>
+                    <h2>My Work</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
@@ -177,7 +177,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="quiz/quiz.html" target = "_blank">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-2replacement.jpg">
                                 </a>
                             </div>
@@ -187,14 +187,14 @@
 
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="http://vh-friendlist.herokuapp.com/">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-3replacement.jpg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="https://github.com/VernH/jslibrary">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-4replacement.jpg">
                                 </a>
                             </div>
