--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="store/index.html" target = "_blank">
+                                <a href="/store/" target = "_blank">
                                     <img class="img-portfolio img-responsive" src="img/gamer.png">
                                 </a>
                             </div>
