--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <!-- font-mfizz -->
+    <link rel="stylesheet" href="./fonts/font-mfizz.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.eot" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css.map" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.svg" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.ttf" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.woff" rel="stylesheet">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -74,7 +84,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Consider Vernell Hill for your next project!</h2>
-                    <p class="lead">Determined, detail oriented, and dependable. <a target="_blank" href="http://join.deathtothestockphoto.com/"></a>.</p>
+                    <p class="lead">Determined, detail oriented, and dependable. <a target="_blank" href="http://join.deathtothestockphoto.com/"></a></p>
                 </div>
             </div>
             <!-- /.row -->
@@ -88,59 +98,59 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Our Services</h2>
+                    <h2>My Skills</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <span class="fa fa-stack fa-4x">
+<!--                                 <i class="fa fa-circle fa-stack-2x"></i>
+ -->                                <i style="color:blue;" class="icon-html5-alt"></i>
                             </span>
-                                <h4>
-                                    <strong>Service Name</strong>
+                                <h4 style="color:blue;">
+                                    <strong>HTML5</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p style="color:blue;" >Created using only HTML and CSS.</p>
+                                <a href="exampleportfolio/index.html" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
+                                <i class="icon-nodejs"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong style="color:blue;">NodeJS</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p style="color:blue;">Experienced with server-side framework.</p>
+                                <a href="https://i-self-trainer-for-lyfe.herokuapp.com/" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+<!--                                 <i class="fa fa-circle fa-stack-2x"></i>
+ -->                                <i style="color:blue;" class="icon-bootstrap"></i>
                             </span>
-                                <h4>
-                                    <strong>Service Name</strong>
+                                <h4 style="color:blue;">
+                                    <strong>Bootstrap</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p style="color:blue;">This was designed with a Bootstrap Template.</p>
+                                <a href="https://fierce-fjord-51499.herokuapp.com/journals/58b7a61fb2393d10000c5808" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+<!--                                 <i class="fa fa-circle fa-stack-2x"></i>
+ -->                                <i class="icon-javascript"></i>
                             </span>
-                                <h4>
-                                    <strong>Service Name</strong>
+                                <h4 style="color:blue;">
+                                    <strong>JavaScript</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p style="color:blue;">This clock is animated by JavaScript.</p>
+                                <a href="file:///C:/Users/Vernv/Desktop/jslibrary/Js30days/JavaScript30/02%20-%20JS%20and%20CSS%20Clock/index-START.html" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
                     </div>
@@ -170,15 +180,15 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="store/" target = "_blank">
-                                    <img class="img-portfolio img-responsive" src="img/gamer.png">
+                                <a href="./shooter/shooter.html" target = "_blank">
+                                    <img class="img-portfolio img-responsive" src="img/phaser-demo.png" height="305">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="quiz/quiz.html" target = "_blank">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2replacement.jpg">
+                                <a href="./Quiz/index.html" target = "_blank">
+                                    <img class="img-portfolio img-responsive" src="img/history-quiz.png">
                                 </a>
                             </div>
                         </div>
@@ -187,22 +197,21 @@
 
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="http://vh-friendlist.herokuapp.com/">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3replacement.jpg">
+                                <a href="http://vh-friendlist.herokuapp.com/" target = "_blank">
+                                    <img class="img-portfolio img-responsive" src="img/friendshangover.jpg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="https://github.com/VernH/jslibrary">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4replacement.jpg">
+                                <a href="https://github.com/VernH/jslibrary" target = "_blank">
+                                    <img class="img-portfolio img-responsive" src="img/ancient-library.jpg">
                                 </a>
                             </div>
                         </div>
                         
                     </div>
                     <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -216,41 +225,48 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                <h3>Connect on Linkedin</h3>
+                <span class="fa-stack fa-4x">
+<!--                     <i class="fa fa-circle fa-stack-2x"></i>
+ -->                        <i class="fa fa-linkedin"></i>
+
+                    
+
+                    <a href="https://www.linkedin.com/in/vernell-hill-75699b136/" class="btn btn-lg btn-light">Click Me!</a>
+                   <!--  <a href="#" class="btn btn-lg btn-dark">Look at Me!</a> -->
                 </div>
             </div>
         </div>
     </aside>
 
     <!-- Map -->
-    <section id="contact" class="map">
+    <!-- <section id="contact" class="map">
         <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
         <br />
         <small>
             <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
         </small>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
+                    <h4><strong>Contact Info</strong>
                     </h4>
-                    <form method="POST" action="http://formspree.io/VernellHill123@gmail.com">
-  <input type="email" name="email" placeholder="Your email">
-  <textarea name="message" placeholder="Your message"></textarea>
-  <button type="submit">Send</button>
+                    <form action="https://formspree.io/vernellhill123@gmail.com"
+      method="POST">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
 </form>
-                    <p>3481 Melrose Place
-                        <br>Beverly Hills, CA 90210</p>
+                    <!-- <p>3481 Melrose Place
+                        <br>Beverly Hills, CA 90210</p> -->
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
-                        </li>
+                        <li><i class="fa fa-phone fa-fw"></i> (317) 941-3515</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to&su">vernellhill123@gmail.com</a>
+                        <!-- </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
@@ -263,9 +279,9 @@
                         <li>
                             <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
                         </li>
-                    </ul>
+                    </ul> -->
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="text-muted">Copyright &copy; https://vernh.github.io/ 2017</p>
                 </div>
             </div>
         </div>
