--- a/index.html
+++ b/index.html
@@ -247,25 +247,28 @@
             <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
         </small>
     </section> -->
-
+      
     <!-- Footer -->
     <footer>
         <div class="container">
+        <div id="contactinfo-border"> 
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Contact Info</strong>
-                    </h4>
+                   <font color="white"><h1><strong>Contact Info</strong>
+                    </h1></font>
                     <form action="https://formspree.io/vernellhill123@gmail.com"
       method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
-    <input type="submit" value="Send">
+    <input id="textboxid" type="text" name="name">
+    <input id="textboxid" type="email" name="_replyto">
+    <input id="submitbtn" type="submit" value="Send">
 </form>
                     <!-- <p>3481 Melrose Place
                         <br>Beverly Hills, CA 90210</p> -->
+                   <font color="white">
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (317) 941-3515</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to&su">vernellhill123@gmail.com</a>
+                    </font>
                         <!-- </li>
                     </ul>
                     <br>
@@ -284,10 +287,11 @@
                     <p class="text-muted">Copyright &copy; https://vernh.github.io/ 2017</p>
                 </div>
             </div>
-        </div>
+       
         <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
     </footer>
-
+    </div>
+ </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
