exampleport first and second posts

--- a/exampleportfolio/index.html
+++ b/exampleportfolio/index.html
@@ -31,7 +31,7 @@
 				</footer>
 
 				<content>
-				<p>There could be an artilce here or some sort of rhetoric. very good practice to create pages like this to increase you knowledge of web design.</p>
+				<p>Your professional bio does need to be formal. But in many cases, writing a bio that's readable -- even conversational -- is actually a really good thing. That means dropping that traditional format of listing your accomplishments like a robot and cramming as much professional-sounding jargon in there as you can.</p>
 				</content>
 			</article>
 
@@ -45,7 +45,7 @@
 				</footer>
 
 				<content>
-				<p>There could be an artilce here or some sort of rhetoric. very good practice to create pages like this to increase you knowledge of web design.</p>
+				<p>If you write in third person, that can get weird, too… especially if the rest of your website is in first person. Because then people know you’re bragging about yourself and that you just wanted to disguise the fact that you were doing it by pretending someone else wrote it.</p>
 				</content>
 			</article>
 		</div>
