--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <strong>JavaScript</strong>
                                 </h4>
                                 <p style="color:blue;">This clock is animated by JavaScript.</p>
-                                <a href="file:///C:/Users/Vernv/Desktop/Online_Shop/02 - JS and CSS Clock/index-START.html" class="btn btn-light">Check It Out</a>
+                                <a href="Online_Shop/jsclock/index-START.html" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
                     </div>
