--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
                             <div class="service-item">
                                 <span class="fa fa-stack fa-4x">
 <!--                                 <i class="fa fa-circle fa-stack-2x"></i>
- -->                                <i style="color:blue;" class="icon-html5-alt"></i>
+ -->                                <i style="color:white;" class="icon-html5-alt"></i>
                             </span>
-                                <h4 style="color:blue;">
+                                <h4 style="color:white;">
                                     <strong>HTML5</strong>
                                 </h4>
-                                <p style="color:blue;" >Created using only HTML and CSS.</p>
+                                <p style="color:white;" >Created using only HTML and CSS.</p>
                                 <a href="exampleportfolio/index.html" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
@@ -121,9 +121,9 @@
                                 <i class="icon-nodejs"></i>
                             </span>
                                 <h4>
-                                    <strong style="color:blue;">NodeJS</strong>
+                                    <strong style="color:white;">NodeJS</strong>
                                 </h4>
-                                <p style="color:blue;">Experienced with server-side framework.</p>
+                                <p style="color:white;">Experienced with server-side framework.</p>
                                 <a href="https://i-self-trainer-for-lyfe.herokuapp.com/" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
@@ -131,12 +131,12 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
 <!--                                 <i class="fa fa-circle fa-stack-2x"></i>
- -->                                <i style="color:blue;" class="icon-bootstrap"></i>
+ -->                                <i style="color:white;" class="icon-bootstrap"></i>
                             </span>
-                                <h4 style="color:blue;">
+                                <h4 style="color:white;">
                                     <strong>Bootstrap</strong>
                                 </h4>
-                                <p style="color:blue;">This was designed with a Bootstrap Template.</p>
+                                <p style="color:white;">This was designed with a Bootstrap Template.</p>
                                 <a href="https://fierce-fjord-51499.herokuapp.com/journals/58b7a61fb2393d10000c5808" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
@@ -146,10 +146,10 @@
 <!--                                 <i class="fa fa-circle fa-stack-2x"></i>
  -->                                <i class="icon-javascript"></i>
                             </span>
-                                <h4 style="color:blue;">
+                                <h4 style="color:white;">
                                     <strong>JavaScript</strong>
                                 </h4>
-                                <p style="color:blue;">This clock is animated by JavaScript.</p>
+                                <p style="color:white;">This clock is animated by JavaScript.</p>
                                 <a href="Online_Shop/jsclock/index-START.html" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
