--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                                 <h4 style="color:white;">
                                     <strong>JavaScript</strong>
                                 </h4>
-                                <p style="color:white;">This clock is animated by JavaScript.</p>
-                                <a href="Online_Shop/jsclock/index-START.html" class="btn btn-light">Check It Out</a>
+                                <p style="color:white;">This is an example of populating items with JavaScript.</p>
+                                <a href="Pantry/index.html" class="btn btn-light">Check It Out</a>
                             </div>
                         </div>
                     </div>
