--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="./Quiz/index.html" target = "_blank">
+                                <a href="Quiz/index.html" target = "_blank">
                                     <img class="img-portfolio img-responsive" src="img/history-quiz.png">
                                 </a>
                             </div>
